fix theme colors on mobile

--- a/src/components/sidebar-nav/sidebar-nav.module.sass
+++ b/src/components/sidebar-nav/sidebar-nav.module.sass
@@ -50,7 +50,9 @@
     gap: 0
 
   &:hover
-    color: var(--bw-ui-sidebar-nav-button-hoverColor, #0061ca)
+    color: var(--bw-ui-sidebar-nav-button-activeColorMobile, #0061ca)
+    @media (min-width: 768px)
+      color: var(--bw-ui-sidebar-nav-button-hoverColor, #000)
     .sidebar-nav__btn__label
       transform: scaleX(1)
       opacity: 1
@@ -66,7 +68,7 @@
     color: var(--bw-ui-sidebar-nav-button-activeColorMobile, #0061ca)
     @media (min-width: 768px)
       pointer-events: none
-      color: var(--bw-ui-sidebar-nav-button-hoverColor, #000)
+
       background-color: var(--bw-ui-sidebar-nav-button-activeColor, #ccc)
       outline: 1px solid hsl(0, 0%, 80%)
 
